tweaked styles.css, cleaned up code lines and spacing issues, added footer to index

--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 body {
     background-color: black;
+    background-image: url("shoecoll.jpeg");
     color: white;
+}
+
+div {
+    background-color: black;
 }
 
 main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.top {
+    font-size: 40px;
+    color: #80ffc0;
 }
 
 h1, h4 {
@@ -18,6 +28,11 @@ h1 {
     text-decoration: underline;
 }
 
-/*change image size, hard coding, media screen sizes*/
+footer {
+    color: black;
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+}
 
 
